gcl (2.6.1-37) unstable; urgency=low

  * mprotect pages PROT_EXEC as CLEAR_CACHE step on amd64-linux

 -- Camm Maguire <camm@enhanced.com>  Tue, 13 Apr 2004 02:39:50 +0000

gcl (2.6.1-36) unstable; urgency=low

  * Improve optimize-maximum-pages algorithm

 -- Camm Maguire <camm@enhanced.com>  Tue,  6 Apr 2004 03:23:40 +0000

gcl (2.6.1-35) unstable; urgency=low

  * Fix sigcontext autodetection on sparc

 -- Camm Maguire <camm@enhanced.com>  Sun,  4 Apr 2004 19:26:48 +0000

gcl (2.6.1-34) unstable; urgency=low

  * Fix GNU_LD autodetection in configure.in
  * Eliminate C_INCLUDE_PATH from shell script wrapper
  * Use lisp rather than 'system touch' to make empty map file in
    compiler::link
  * fix small bug when info is passed bad second argument
  * Don't try to open map file if doesn't stat (macosx)
  * Add earlier forgotten branch patch to sfaslbfd.c for macosx
  * Backport new eval-when keyword support from 2.7 to run random tester
  * Perhormance improvement to gcl_seqlib.lsp -- no inner loop over
    bignums
  * Proper contblock/relblock determination when expanding string
    streams
  * Proper string type determination for *link-array*
  * .ini files depend on plt.h
  * plttest.c cannot depend on include.h
  * Address longstanding FIXmE in gensym, so that two strings are not
    allocated for each gensym
  * Fix rare infinite loop bug in array.c
  * Import si::info into 'user
  * , -> # as sed separator
  * Minro warning removals and fixups
  * Binary searches through ordered arrays of referred and changed
    variables for dramatic compiler performance improvement in the large
    case -- support declarations and thereby optimizations of the form
    (declare ((vector t) foo)), etc.
  * Better 'time macro
  * rebuild pcl_gaz* files
  * cleanup room report and give more space to modern large heaps
  * room report formatting
  * Properly gensymmed time macro
  * Allow for white space chars in compiled filenames